# python_professional_otus

./: .gitignore  .pylintrc  README.md
.github/workflows/: pylint.yml
homework1/: .gitignore  README.md  config.ini  log_analyzer.py  pyproject.toml
homework1/log/: .gitignore
homework1/reports/: .gitignore  report-2017.06.30.html
homework1/tests/: test_config.ini  test_log_analyzer.py
homework1/tests/fixture/: nginx-access-ui.log-20170629.txt
homework10/: homework.ipynb  pyproject.toml
homework10/dmia/: gradient_check.py
homework10/dmia/classifiers/: logistic_regression.py
homework11/: README.md  pyproject.toml  ycrawler.py
homework12/: README.md  memc_load.py  memc_load_concur.py
homework15/: go.mod  main.go
homework15/appinstalled/: appinstalled.pb.go  appinstalled.proto
homework3/: README.md  api.py  test.py
homework4/: .gitignore  README.md  api.py  config.py  pyproject.toml  scoring.py  store.py
homework4/app/: api.py  appstore.py  scoring.py  store.py
homework4/tests/: helper.py  test_apy.py  test_fields.py  test_store.py
homework4/tests/integration/: test_apy.py  test_store.py
homework4/tests/unit/: test_appstore.py  test_fields.py
homework5/: README.md  httpd.py  httptest.py  pyproject.toml  server.py
homework6/mysite/mysite/: settings.py  urls.py
homework6/mysite/polls/: admin.py  models.py  tests.py  views.py
homework7_8/: README.md
homework7_8/hasker/accounts/: admin.py  mixins.py  models.py  urls.py  views.py
homework7_8/hasker/hasker/: settings.py  urls.py  views.py
homework9/: .gitignore  README.md
(+65 files in other folders)
