[tool.poetry]
name = "homework10"
version = "0.1.0"
description = ""
authors = ["Inna Sorina <sorina-inna@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.2"
matplotlib = "^3.5.3"
pandas = "^1.4.3"
tqdm = "^4.64.0"
seaborn = "^0.11.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
