[tool.poetry]
name = "homework4"
version = "0.1.0"
description = ""
authors = ["\"InInna Sorina <sorina-inna@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "^4.3.4"
fakeredis = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
